# stoken

./: CMakeLists.txt  README.txt
include/: contracts.hpp
src/: CMakeLists.txt  stoken.cpp
